# ARQUIVOS_FINAIS_FASTAPI

./: LICENSE  README.md
website_2026/: .env  README.md  auth.py  config.py  database.py  main.py  models.py  pyproject.toml  web_site.db
website_2026/routers/: posts.py  users.py
website_2026/static/: site.webmanifest
website_2026/static/js/: auth.js  utils.js
website_2026/templates/: account.html  layout.html  login.html  post.html  register.html  user_posts.html
